added more p&c stuff!

--- a/pages/PandC/ToolsAndResources/LeadershipTraining/leadershipTrainingIntro.mdx
+++ b/pages/PandC/ToolsAndResources/LeadershipTraining/leadershipTrainingIntro.mdx
@@ -1,1 +1,8 @@
-Nothing here yet... Coming soon!
+# Leadership Training Introduction
+	Welcome to the page dedicated to an introduction to Leadership Trainings! It is crucial for every student to understand aspects of leadership, so let’s dive in!
+
+# What Would Leadership Training Entail?
+Each year, new leaders take hold of the torch and take the opportunity to lead an aspect of a robotics team, whether it’s in mechanical, electrical, software, business, or others. Not only should they be equipped with lots of knowledge in their area, but they should also be able to effectively portray leadership skills.
+
+Through an annual Leadership Training open to all students on the team (but mandatory for all leads), you can build core leadership values through personality quizzes, open collaboration, and hands-on activities together to stimulate leadership. Take a look at some of the resources we use in our Leadership Retreat and an outline of what your team can do during yours in the **Leadership Training Resources & Outline** section!
+
