--- a/pages/PandC/ToolsAndResources/LeadershipTraining/leadershipTrainingResources.mdx
+++ b/pages/PandC/ToolsAndResources/LeadershipTraining/leadershipTrainingResources.mdx
@@ -1,1 +1,20 @@
-Nothing here yet... Coming soon!
+# Leadership Training Resources & Outline
+	Welcome to the page dedicated to the FEDS’ resources for an effective Leadership Retreat / Training and an outline you can follow to foster further leadership skills in aspiring student leaders!
+
+View the FEDS’ 2024 Leadership Training Slideshow below:
+
+https://docs.google.com/presentation/d/1AFFfqa1-zt238GySloNH7xo4PNhMJjh5/edit#slide=id.p1
+
+View the FEDS’ 2023 Leadership Training Slideshow below:
+
+https://docs.google.com/presentation/d/1bvaiL-OCWZVipd9oVoc7vIVoVddxFPZz/edit#slide=id.p48
+
+# What is Included in the FEDS’ Leadership Trainings?
+	As you can see from the slideshows, the FEDS’ annual leadership retreats include multiple different forms of hands-on activities, open collaboration, teamwork, and general pointers at acting as a good leader. Below is a list of some of the topics that we include in our leadership retreats:
+
+- Icebreakers (Communication, Hands-on, etc): One of the most important parts of the FEDS’ leadership retreat, Icebreakers not only act as activities to allow aspiring leaders to get to know more about each other, but they also both stimulate and simulate skills in effective communication, work under pressure, and learning experiences. You can even connect these to FIRST’s core values, being sure to keep them in check during the icebreakers. These activities can range from writing a fun fact about yourself and making a paper plane out of it, trying to guess others by their planes to working collaboratively in a group to build a roller coaster out of limited materials.
+- Personality Quizzes: Getting to know about one another is essential to being able to collaborate and communicate effectively in a group. Personality tests like the one linked in the 2024 leadership training slideshow show how you function as an individual, and ultimately effect your primary leadership style (Outlined below).
+- Expectations as a Leader: As a leader, a student must take on a large role while also being efficient and supporting the whole group in learning and applying their skills. One should not lose their cool on one another, as that will only escalate the situation; Maintaining positivity and acting clear-minded / respectful to all ideas and perspectives is key to being a strong leader.
+- Finding our Leadership Style: There are many types of leadership that may resonate with individuals differently than others. It is important to understand the type of leader that students would like to be to best support their team as that will influence communication and overall learning of other students. In the 2024 FEDS Leadership Training slideshow, you can find a chart of numerous different types of leaders; Try to connect how some of these different leading styles can correlate to overall strong qualities to your team!
+
+We hope this helps you on your journey to explore the FEDS Leadership Trainings; Feel free to emulate an aspect of the training that you find especially captivating, and reach out to us with any questions!
