--- a/pages/PandC/ToolsAndResources/SocialMediaManagement/PhotosAndVideos.mdx
+++ b/pages/PandC/ToolsAndResources/SocialMediaManagement/PhotosAndVideos.mdx
@@ -1,1 +1,16 @@
-Nothing here yet... Coming soon!
+# Photography and Videography:
+    Welcome to the page dedicated to The FEDS 201 photography and videography! This page will feature documentation and tips on everything photography and videography-related and how your team can find success.
+
+# Photography:
+When taking photos for the team, all photos should be neatly stored in a singular Google Drive or other sort of storage accessible to anyone who needs access to team-related photos. For instance, we have a Photos drive where we have specific folders for each event we have taken photos at. When taking photos, it is best to show the emotions of the subject of the photo, meaning not to be afraid to get close to your subject at competitions. One area that may produce the best possible photos is around the field, where you can capture the emotions of the drive team rather than taking match photos far away from the stands. Just make sure to be respectful of the volunteers there with where you set up to take photos!
+
+When you’re at competitions and you know you may not be able to upload photos from your camera to post, you should take a few photos on your phone to at least make a post for each day of the event. After being at a competition all day, you will likely have taken a lot of photos; to make your workload easier, you can put all of the photos of the event into one folder and comb through later to pick out the best ones.
+
+# Videography: 
+From our experience this past year, we have participated in creating many videos, namely our teams’s Impact Award Video. When making any type of video, it is crucial to recognize what you are making it for and matching that specific audience. For example, depending on the video, you may want to have the students in the video talking or you may want to upload a voiceover that would be more clear / audible. 
+    
+A must-have for all of our videos are captions! Closed captions are not only extremely simple to add, but they also make a video understood much easier, and even brings in a whole new audience that wouldn’t be able to understand the video without them. A lot of platforms today such as CapCut can even auto-generate captioning for you, so why not include them?
+
+Feel free to look on our team website, feds201.com, to link to some of our videos and our Youtube Channels to see some of our team's videography in action!
+
+We hope this page helps you! Feel free to reach out to us with any questions.
