--- a/pages/PandC/ToolsAndResources/SocialMediaManagement/SocialMediaIntro.mdx
+++ b/pages/PandC/ToolsAndResources/SocialMediaManagement/SocialMediaIntro.mdx
@@ -1,1 +1,13 @@
-Nothing here yet... Coming soon!
+# Social Media:
+    Welcome to the page dedicated to the FEDS 201’s Social Media information! This page includes tips on what and when your team should post.
+
+# What Social Media Should You Use?
+Our team prefers posting mostly on Instagram, with occasional posts on TikTok and Facebook. Many other FRC teams also utilize Instagram, making contact with other teams easier when we need a quick reply. Instagram is convenient when it comes to promoting fundraisers and new initiatives as you can post flyers on your story, which disappears after 24 hours, and also directly message other teams. Instagram also has a permanent post feature where the post will stay on your page until you decide to delete it. TikTok can also be used for less serious posts if you want to promote your team through using a sound that is popular or participating in a trend. The target audience of TikTok is younger ages, so it would be as efficient to use when needing to promote events.
+
+# Social Media Planner:
+At the beginning of the school year, it’s crucial to dedicate time to creating a calendar regarding your team’s events, important dates, team meetings, etc. This gives you a solid foundation to plan all of your posts ahead in the same place. We also encourage you to stay on top of your prescheduled posting plans to make sure posts stay consistent and follow the events your team partakes in. You can use any form of media to plan your posts; this year (2025) we decided to use Google Sheets. Your team’s method of mapping out posts may vary depending on how your team prefers to stay organized.
+
+# Social Media Posts:
+Once the Social Media content planner is made, it’s recommended to upkeep to atleast be one post a week. These can be team updates, sponsor week, fundraisers, or your team's version of agent of the week (if any, documentation can be found here). If you ever need to make a format for a post, there are numerous design applications out there that make it easy to create a design through pre-created formats, notably Canva.
+
+Hopefully this page helps! Feel free to reach out with any questions.
