--- a/pages/PandC/ToolsAndResources/SpecialProjects/SpecialProjectsIntro.mdx
+++ b/pages/PandC/ToolsAndResources/SpecialProjects/SpecialProjectsIntro.mdx
@@ -1,1 +1,16 @@
-Nothing here yet... Coming Soon!
+# Special Projects Introduction:
+	Welcome to the page dedicated to The FEDS 201 special project points and the management of them so you can track the participation of events outside of your daily meetings. 
+
+# What is a Special Project?
+	The FEDS’ use of Special Projects are as an event or task that isn’t involved in the usual meeting agenda or subgroup plans. This could be anything from visiting a elementary school for a school fair to creating buttons for a upcoming competition to even being an impact presenter. We set points to specific projects that need to get done and who ever does said task will be awarded the points that go with it. There is a minimum amount of special project points that each member needs to fufill by the end of the year on the FEDS, which is 25 points; Points vary between each project and can vary year-to-year depending on the amount of projects available, but the system is flexible in the fact that point values or maximums can be changed depending on necessity.
+
+Some of the FEDS Special Projects include:
+- Visiting Community Events to represent the team and sponsors
+- Visiting local Elementary Schools for robotics science fairs
+- Participating in advocacy alongside sister teams
+- Coordinating with press and newspapers writing stories about robotics
+- Updating the team website
+- Team photographer / videographer
+- And so much more!
+
+Special Projects can not only help your team accomplish more goals through organized objectives, but it also helps maintain efficiency and involvement of all students as even when there may not be any work to do on the robot, there is always work that can be done on Special Projects. See the Special Project model in the **Special Project Spreadsheet & Management** section for how to structure this spreadsheet for your team and your needs.
