--- a/pages/PandC/ToolsAndResources/SpecialProjects/SpreadheetAndManagement.mdx
+++ b/pages/PandC/ToolsAndResources/SpecialProjects/SpreadheetAndManagement.mdx
@@ -1,1 +1,23 @@
-Nothing here yet... Coming Soon!
+# Special Project Spreadsheet Template & Management
+	Welcome to the page dedicated to the FEDS’ Special Project Spreadsheet model and how to effectively manage it to foster the most success at expanding the amount of tasks students can do (especially newer students) for the team! Let’s dive in!
+
+# Special Project Spreadsheet Template:
+	Below, you can find a template for the Special Project Sheet that we use, and some example projects that are included. Click the link to see how your team can implement your own projects for students to sign up for and accomplish!
+
+https://docs.google.com/spreadsheets/d/1N4Nl8rIycG6pvtcDF1oZ8hLrhJUn5fOlcxHOzrFzGeU/edit?usp=sharing
+
+# How the Special Project Spreadsheet Works / Functions:
+	As you can see, Special Projects can truly be implemented into all aspects of the team! Our team’s special projects fall into categories such as Advocacy (Ex. taking part in advocacy), Outreach (Ex. participating in community outreach), Awards (Ex. taking lead as a technical / business award auditor), Competitions (Ex. taking on a specific role at comps like Pit Presenter or Gracious Professionalism Taskforce), FIRST (Ex. FIRST Team mentoring / event volunteering), Imagery (Ex. photography & videography), or even Shop / Classroom (Ex. tasks to be done at every day meetings outside a student’s usual role such as making buttons or field building).
+
+	Each project has a distinct point amount that they grant to students who accomplish them, which would count towards their required amount of points to get throughout the year / season. The FEDS are a year-long team, so if your team is one that only runs during the build / competition, your maximum point requirement or points allotted per project would likely be adjusted. The majority of example projects listed may not apply to your team (Ex. ones to do with our team-specific initiatives), and that is completely ok! Use this spreadsheet as a reference to add your team’s priorities / projects.
+
+	Based on the maximum amount of students you want to have assigned to each project, you can input the specified number and input the correct amount of yellow boxes in appropriation. To sign up, a student can input their name into one of the boxes, and the box will turn green!
+
+# How Should You Effectively Manage Your Team’s Special Project Spreadsheet?
+Here are some pointers to be sure your Special Project system is efficient, sustainable, and works as intended:
+1. Make sure that you set a reasonable amount of points to each project! These will influence how many projects each student needs to take part in to reach their point goal, so make sure there are reasonable points given for each!
+2. Set an achievable amount of points that each student will be required to earn. This will ensure the projects get done and the students will be able to hit their quota of points.
+3. Set due dates for each project! This will give students a sense of priority of the projects they signed up for and which ones should be completed first, and will help ensure projects can be completed in a reasonable amount of time.
+4. Be sure to actively review the Special Project Process and students’ progress throughout the season. It may become apparent to adjust some projects and their respective points, or there may be room to add / remove certain projects. Through team discussion at the end of the season, you can review how the system went and how you can further make improvements informed to your team’s needs.
+
+Hopefully this helps! Feel free to reach out with any questions.
