--- a/pages/PandC/ToolsAndResources/SponsorshipsAndFundraising/SponsorsAndFundsIntro.mdx
+++ b/pages/PandC/ToolsAndResources/SponsorshipsAndFundraising/SponsorsAndFundsIntro.mdx
@@ -1,1 +1,23 @@
-Nothing here yet... Coming soon!
+# Why are Sponsorships and Fundraising so Important?
+Welcome to the page dedicated to sponsorships and fundraising efforts and their benefits to your team! Let’s dive right in!
+
+# What Makes Sponsorships Important?
+	It is likely that your team has sponsors of your own, but the main benefit of having team sponsors are that they can support your team in almost all aspects. Whether it is through direct funding for software, supplies, travel, or even support through team lunches, sponsors can help mitigate costs that would have otherwise been directly paid for by your team. Sponsorships won’t likely pay for all of your team costs, which moves us into my next point: Fundraising!!
+
+# What can Fundraising do for Your Team?
+	As stated above, sponsorships won’t always fully cover all team costs, so what better way can you raise money to help fund these costs? (Hint, it’s fundraising!). Fundraising can be done by your team in many ways, including through restaurant fundraisers, community fundraisers, and even digital fundraisers such as ones you can send to friends and family over text!
+
+	Here are some advantages of fundraising:
+Provides additional financial aid: Fundraising can provide additional financials that can go towards any aspect of the team, as some sponsors do require their sponsorship to go towards a specific part / aspect of the team.
+
+Supports long-term sustainability: The additional money generated through fundraising can help ensure your team can continue to run in future seasons, even if a loss of sponsorships or funding from your school becomes apparent.
+
+Team development: Fundraising can help provide resources for team activities, workshops, and other opportunities as well that wouldn’t otherwise been reachable.
+
+Funds can go towards hardware / software: Through the additional financials provided through fundraising, you can delegate funding towards purchasing more / better hardware and software for your build and programming / CAD teams, which can overall help the build season process of your robot.
+
+Stronger team network in the community: Fundraising in your community allows for not only a greater reach of the fundraiser, but it can also connect you further into the community, establish a greater presence of your team, and can even build strong and unsuspected relations.
+
+Funds can go towards other initiatives. Some of the fundraisers the FEDS have go directly towards other initiatives, including non-profits, schools, and other global teams / organizations. This can expand a team’s impact on the world, but also helps support a cause that your team may want to support.
+
+Hopefully this helps you on your journey learning about Sponsorships & Fundraising! Feel free to reach out with any questions.
