--- a/pages/PandC/ToolsAndResources/SponsorshipsAndFundraising/SponsorshipAcquisition.mdx
+++ b/pages/PandC/ToolsAndResources/SponsorshipsAndFundraising/SponsorshipAcquisition.mdx
@@ -1,1 +1,13 @@
-Nothing here yet... Coming soon!
+# Sponsorship Acquisition Guide:
+	Welcome to the page dedicated to sponsorship acquisition! Let’s dive right in!
+
+# What is the Most Effective Method of Procuring Sponsorships?
+There are many methods of acquiring sponsorships. The FEDS use a step-by-step system of sponsorship procurement to obtain the most amount of sponsors in an efficient way. Developed by our students, our Sponsor Scouting Tool allows us to make educated decisions about which companies we want to reach out to ask for sponsorship requests, and we’ve seen success from it (We obtained 12 new sponsors in addition to 6 returning sponsors thanks to this tool)! Below is the steps of our sponsor acquisition process using our Sponsor Scouting Tool:
+
+1. We start in a full group where we brainstorm as many local / beyond companies as possible into a list of potential sponsorships. We split into groups (1 for close in the community, 1 for companies in the greater area, and larger / more global companies, etc)
+2. From there, we assess each by doing research on them about what type of company they are / what they do, if we have any connections there already / can make one, if they already have a FIRST sponsorship program, etc. (relating to STEM / FIRST, etc), and rate each out of 10 (with 1 being not likely to sponsor your team at all to 10 being that they totally would).
+3. By looking at the highest-ranked companies, we reach out to them from there either by email or in-person (Only for closer companies would in-person be viable) using an email draft we made to reach out to sponsors. We value our sponsors like members and partners of our team, and growing a relationship before we ask for a sponsorship. Thus, for companies nearby to us, we start by inviting representatives from the respective company to our workspace to show them what we do and our accomplishments, or also ask if we may be able to tour their facilities. This helps build a connection between us and nearby companies, and we value these relationships with them.
+4. After this process, hopefully your team found yourselves some sponsorships!
+
+# Sponsor Scouting Tool:
+Nothing here yet... Coming Soon!
