--- a/pages/PandC/ToolsAndResources/TeamCalendar/CalendarIntro.mdx
+++ b/pages/PandC/ToolsAndResources/TeamCalendar/CalendarIntro.mdx
@@ -1,1 +1,10 @@
-Nothing here yet... Coming Soon!
+Team Calendar Introduction:
+	Welcome to the page dedicated to team calendars, their importance, and how to create and sustain one for your team! Let’s dive in!
+
+Benefits of a Team Calendar:
+	There are many reasons why you should have a calendar for your team; If you don’t already have one we highly recommend that you do. Like all calendars, having a calendar specifically dedicated to the team / team events can make sure the whole team is aware of events and other important dates ahead of time, meeting schedules, or other activities that the team participates in. 
+
+How Should You Make Your Team Calendar?
+	Having a calendar that can be accessed by everyone on the team is an important factor as part of having a team calendar to ensure everyone is aware of team dates. One easy format is through Google Calendar, where everyone can have access and add to the calendar remotely, which will be further covered in the **Calendar Organzation & Maitnence** section. An ordinary paper calendar works just the same too, but just make sure that it is accessible to everyone on the team!
+
+To learn more about Team Calendars and Maitnence, go over to the next section!
