Add comprehensive documentation and simulation features for PyIntel Scoutz
- Introduced "Behind the Scenes" documentation detailing the match prediction simulation engine.
- Created "Match Predictor" documentation explaining the tool's analytics and machine learning capabilities.
- Implemented "MatchSimulator" component for interactive match simulations with team profiles.
- Developed "PyIntelScoutz" overview documentation outlining the application's architecture and features.
- Compiled "ScoutOpsSuiteDocs" for complete guidance on the PyIntel Scoutz and ScoutOps Suite.
- Defined "Scouting Data Structure" documentation to clarify data collection and usage.
- Added metadata for easy navigation between documentation pages.
- Enhanced application with Google Analytics integration for tracking user interactions.

--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,14 +1,15 @@
 import { useEffect } from 'react';
 import Head from 'next/head';
 
-function MyApp({ Component, pageProps }) {
+export default function MyApp({ Component, pageProps }) {
   useEffect(() => {
     const handleRouteChange = (url) => {
       window.gtag('config', 'G-N3TT9XBHV0', {
         page_path: url,
       });
     };
-   
+    
+    window.addEventListener('routeChangeComplete', handleRouteChange);
   }, []);
 
   return (
@@ -30,5 +31,3 @@ function MyApp({ Component, pageProps }) {
     </>
   );
 }
-
-export default MyApp;
