--- a/pages/Contribution/general.mdx
+++ b/pages/Contribution/general.mdx
@@ -2,6 +2,10 @@ import Head from 'next/head';
 import {Callout, Cards, Card,Steps} from "nextra/components";
 import { FaCode, FaExpeditedssl, FaPlug, FaCube, FaRegLightbulb, FaBuildingShield } from "react-icons/fa6";
 
+{/*<video controls width="100%" playsInline>
+  <source src="https://videolink/here.mp4" type="video/mp4" />
+  Your browser does not support the video tag.
+</video>*/}
 
 <Head>
     <title>Contribution - FEDS201</title>
