--- a/pages/Programming/Subsystems/Swerve.mdx
+++ b/pages/Programming/Subsystems/Swerve.mdx
@@ -14,10 +14,9 @@ Our team predominantly uses CTR's Serve Drive System for our drive base. This sy
 
 The drive base consists of the following components:
 
-- **Motors**: We use Falcon 500 motors for our drive base.
-- **Wheels**: We use 6-inch pneumatic wheels for our drive base.
-- **Gearbox**: We use a custom gearbox for our drive base.
-- **Encoders**: We use CTRE Mag Encoders for our drive base.
+- **Motors**: We use Falcon Kraken x60 motors for our drive base.
+- **Wheels**: We use 4-inch diameter wheels for our drive base.
+- **Encoders**: We use CTRE CANcoders for our drive base.
 
 <Callout type={"info"} emoji={"💡"}>
     In order to use CTRE's Swerve Drive System, you will need to have CTRE's Motors, Encoders, and Pigeon IMU.
