Add Vercel Analytics component to MyApp for enhanced tracking

--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -15,6 +15,7 @@ export default function MyApp({ Component, pageProps }) {
 
   return (
     <>
+    <Analytics/>
       <Head>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-N3TT9XBHV0"></script>
         <script
